add loop to apt

--- a/roles/common/tasks/apt.yml
+++ b/roles/common/tasks/apt.yml
@@ -15,42 +15,10 @@
   ansible.builtin.apt:
     update_cache: yes
     force_apt_get: yes 
-    name:
-      - assetfinder
-      - awscli
-      - bloodhound
-      - chromium
-      - docker.io
-      - docker-compose
-      - dnsutils
-      - eyewitness
-      - gdb
-      - gdbserver
-      - gem
-      - gobuster
-      - golang
-      - jq
-      - libpcap-dev  
-      - libssl-dev
-      - mimikatz
-      - ncat  
-      - nbtscan-unixwiz
-      - neo4j
-      - npm
-      - parallel
-      - payloadsallthethings
-      - powershell-empire
-      - python3-pip
-      - python3-venv
-      - gobuster
-      - ffuf
-      - netdiscover
-      - seclists 
-      - spiderfoot
-      - sublist3r 
-      - terminator  
+    name: "{{ item }}"
     state: present
-
+  loop: "{{ kali_packages }}"
+  
 - name: Remove useless packages from cache
   ansible.builtin.apt:
     autoclean: true      
