--- a/roles/common/tasks/main.yml
+++ b/roles/common/tasks/main.yml
@@ -15,3 +15,6 @@
   become: True
   ansible.builtin.import_tasks: aquatone.yml
 
+- name: Set Environment
+  become: True
+  ansible.builtin.import_tasks: env.yml
