--- a/roles/common/tasks/env.yml
+++ b/roles/common/tasks/env.yml
@@ -2,3 +2,16 @@
 # Env commands
 - name: Hush Login
   ansible.builtin.command: touch ~/.hushlogin
+
+- name: Edit .zshrc  
+  ansible.builtin.blockinfile:
+    path: ~/.zshrc
+    block: |
+      export GOROOT=/usr/lib/go
+      export GOPATH=$HOME/go
+      export PATH=$GOPATH/bin:$GOROOT/bin:$PATH
+
+      export PATH="$PATH:/home/fortalice/.local/bin"
+
+- name: Source ZSH
+  ansible.builtin.command: source ~/.zshrc
