--- a/roles/common/tasks/env.yml
+++ b/roles/common/tasks/env.yml
@@ -6,6 +6,7 @@
 - name: Edit .zshrc  
   ansible.builtin.blockinfile:
     path: ~/.zshrc
+    backup: yes
     block: |
       export GOROOT=/usr/lib/go
       export GOPATH=$HOME/go
