--- a/roles/common/tasks/env.yml
+++ b/roles/common/tasks/env.yml
@@ -5,6 +5,7 @@
 
 - name: Edit .zshrc  
   ansible.builtin.blockinfile:
+  path: "{{ ansible_env.HOME }}/.zshrc"
     path: ~/.zshrc
     backup: yes
     block: |
