Update apt installation code and add update db

--- a/roles/common/tasks/apt.yml
+++ b/roles/common/tasks/apt.yml
@@ -7,16 +7,13 @@
   ansible.builtin.apt:
     autoclean: true      
  
-- name: Remove package dependencies that are no longer required 
-  ansible.builtin.apt:
-    autoremove: true        
-
 - name: Install multiple apt packages
   ansible.builtin.apt:
     update_cache: yes
-    force_apt_get: yes 
+    force_apt_get: yes
+    install_recommends: yes
     name: "{{ item }}"
-    state: present
+    state: latest 
   loop: "{{ kali_packages }}"
   
 - name: Remove useless packages from cache
@@ -26,6 +23,9 @@
 - name: Remove package dependencies that are no longer required 
   ansible.builtin.apt:
     autoremove: true        
+
+- name: Update local Database
+  ansible.builtin.command: updatedb
 
 
 
