--- a/roles/common/tasks/env.yml
+++ b/roles/common/tasks/env.yml
@@ -1,26 +1,42 @@
 ---
 # Env commands
-- name: Hush Login
+- name: Hush Login for ssh
   ansible.builtin.command: touch ~/.hushlogin
 
-- name: Edit .zshrc  
+- name: Set zsh as default shell
+  user:
+    name: "{{ zsh_user }}"
+    shell: /bin/zsh
+  become: true
+
+ - name: Get stats of a file
+  ansible.builtin.stat:
+    path: "{{ ansible_env.HOME }}/.zshrc"
+  register: zsh
+
+- name: zsh debug    
+  ansible.builtin.debug:
+    msg: "zshrc file does not exist (path doesn't exist)"
+  when: zsh.stat.exists == False
+
+- name: zsh debug
+  ansible.builtin.debug:
+    msg: "zshrc exists"
+  when: zsh.stat.exists 
+
+- name: Edit .zshrc
   ansible.builtin.blockinfile:
-  path: "{{ ansible_env.HOME }}/.zshrc"
-    path: ~/.zshrc
+    path: "{{ ansible_env.HOME }}/.zshrc"
     backup: yes
     block: |
       export GOROOT=/usr/lib/go
       export GOPATH=$HOME/go
       export PATH=$GOPATH/bin:$GOROOT/bin:$PATH
-
-      export PATH="$PATH:/home/fortalice/.local/bin"
+      
+      #export PATH="$PATH:/home/user/.local/bin"
       
       ## grep aliases
       alias grep="grep --color=auto"
-      alias igrep="grep -i"
-      alias vgrep="grep -v"
-      alias egrep="egrep --color=auto"
-      alias fgrep="fgrep --color=auto"
 
       ## List open ports
       alias ports="netstat -tulanp"
@@ -48,9 +64,4 @@
       }
       # ex() is copied from https://github.com/Raikia/Kali-Setup/blob/master/kali.py
 
-      # python aliases
-      alias py="python3"
-      alias py2="python2"
 
-      # General Aliases
-      alias cl="clear"
