--- a/roles/common/tasks/pip.yml
+++ b/roles/common/tasks/pip.yml
@@ -1,4 +1,3 @@
----
 - name: Install and upgrade pip
   ansible.builtin.pip:
     name: pip
@@ -15,5 +14,15 @@
 - name: Install pipx
   ansible.builtin.shell: python3 -m pip install --user pipx
 
+- name: Source Path and Download pipx 
+  become_user: '{{ zsh_user }}'
+  ansible.builtin.shell: source .zshrc && pipx install witnessme --force
+  args:
+    executable: /bin/zsh
 
+- name: Source Path and Download pipx 
+  become_user: '{{ zsh_user }}'
+  ansible.builtin.shell: source .zshrc && pipx install crackmapexec --force
+  args:
+    executable: /bin/zsh
 
